--- a/app.json
+++ b/app.json
@@ -3,28 +3,17 @@
     "name": "veryfi-lens-react-native-expo-demo",
     "slug": "veryfi-lens-react-native-expo-demo",
     "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+    "plugins": [
+      "expo-build-properties",
+      {
+        "android": {
+            "compileSdkVersion": 32,
+            "targetSdkVersion": 32
+        }
       }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    }
+    ]
   }
 }
