--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -4,8 +4,9 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <application 
-        android:usesCleartextTraffic="true"
+        android:usesCleartextTraffic="true" 
+        android:allowBackup="false"
         tools:targetApi="28" 
         tools:ignore="GoogleAppIndexingWarning" 
-        tools:replace="android:usesCleartextTraffic" />
+        tools:replace="android:usesCleartextTraffic,android:allowBackup" />
 </manifest>
