--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "@types/react": "~18.0.27",
-    "@veryfi/react-native-veryfi-lens": "^1.5.25",
+    "@veryfi/react-native-veryfi-lens": "^1.5.26",
     "expo": "~49.0.13",
+    "expo-build-properties": "~0.6.0",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.72.4",
-    "typescript": "^4.9.4",
-    "expo-build-properties": "~0.6.0"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
