LP-932: Updated React Native Project

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
+  "name": "veryfi_lens_react_native_demo",
+  "displayName": "veryfi_lens_react_native_demo",
   "expo": {
-    "name": "veryfi-lens-react-native-expo-demo",
-    "slug": "veryfi-lens-react-native-expo-demo",
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
@@ -12,20 +12,14 @@
         {
           "android": {
             "minSdkVersion": 23,
-            "compileSdkVersion": 33,
-            "targetSdkVersion": 33
+            "compileSdkVersion": 34,
+            "targetSdkVersion": 34
           }
         }
       ]
     ],
     "android": {
       "package": "com.veryfi.lens.expodemo"
-    },
-    "extra": {
-      "eas": {
-        "projectId": "87ffa316-fb59-4d40-95aa-5f13e47a81a0"
-      }
-    },
-    "owner": "seramirez-veryfi"
+    }
   }
 }
