--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "veryfi-lens-react-native-expo-demo",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -9,18 +9,47 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@types/react": "~18.0.27",
+    "@react-native-community/cli": "^10.2.7",
     "@veryfi/react-native-veryfi-lens": "^1.5.38",
-    "expo": "~49.0.13",
-    "expo-build-properties": "~0.6.0",
-    "expo-splash-screen": "~0.18.2",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^51.0.0",
+    "expo-build-properties": "~0.12.1",
+    "expo-font": "^12.0.5",
+    "expo-status-bar": "^1.12.1",
     "react": "18.2.0",
-    "react-native": "0.72.4",
-    "typescript": "^4.9.4"
+    "react-native": "0.74.1",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-eject": "^0.2.0",
+    "react-native-remote-svg": "^2.0.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/babel-preset": "0.74.83",
+    "@react-native/eslint-config": "0.74.83",
+    "@react-native/metro-config": "0.74.83",
+    "@react-native/typescript-config": "0.74.83",
+    "@types/react": "^18.2.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.6.3",
+    "eslint": "^8.19.0",
+    "jest": "^29.6.3",
+    "prettier": "2.8.8",
+    "react-test-renderer": "18.2.0",
+    "typescript": "5.0.4"
   },
-  "private": true
+  "engines": {
+    "node": ">=18"
+  },
+  "jest": {
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  }
 }
