--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
+    "newArchEnabled": false,
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
@@ -14,7 +15,8 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.veryfi-lens-react-native-demo"
+      "bundleIdentifier": "com.veryfi-lens-react-native-demo",
+      "deploymentTarget": "15.1"
     },
     "android": {
       "adaptiveIcon": {
