--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "veryfi-lens-react-native-expo-demo",
   "main": "expo-router/entry",
-  "version": "2.0.22",
+  "version": "2.0.31",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -14,37 +14,36 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
-    "@react-navigation/native": "^7.0.0",
-    "@veryfi/react-native-veryfi-lens": "^2.0.22",
-    "expo": "^52.0.21",
-    "expo-constants": "~17.0.3",
-    "expo-font": "~13.0.2",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.14",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.6",
-    "expo-web-browser": "~14.0.1",
-    "expo-build-properties": "0.13.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.3",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.13"
+    "@expo/vector-icons": "14.1.0",
+    "@react-navigation/native": "7.1.14",
+    "@veryfi/react-native-veryfi-lens": "^2.0.31",
+    "expo": "53.0.12",
+    "expo-build-properties": "0.14.6",
+    "expo-constants": "17.1.6",
+    "expo-font": "13.3.1",
+    "expo-linking": "7.1.5",
+    "expo-router": "5.1.0",
+    "expo-splash-screen": "0.30.9",
+    "expo-status-bar": "2.2.3",
+    "expo-system-ui": "5.0.9",
+    "expo-web-browser": "14.2.0",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "^2.26.0",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "^5.5.0",
+    "react-native-screens": "^4.11.1",
+    "react-native-web": "0.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@react-native-community/cli": "^15.1.3",
-    "@types/jest": "^29.5.14",
-    "@types/react": "^18.3.1",
-    "@types/react-test-renderer": "^18.3.0",
-    "jest": "^29.7.0",
-    "jest-expo": "~52.0.2",
-    "react-test-renderer": "18.3.1",
+    "@babel/core": "7.27.4",
+    "@react-native-community/cli": "^18.0.0",
+    "@types/jest": "30.0.0",
+    "@types/react": "19.0.0",
+    "@types/react-test-renderer": "19.0.0",
+    "jest": "30.0.3",
+    "jest-expo": "53.0.7",
+    "react-test-renderer": "19.0.0",
     "typescript": "~5.7.2"
   },
   "private": true
